fix(security): resolve high severity vulnerabilities in auth, logging, cors, and docker